--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #000;
+  background-color: #ffffff;
   /* background-image: url('./assets/background.png'); */
   background-size: auto 100%;
   background-position: center center;
