--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html,
 body {
+  /**/
   /* background-color: #ffffff; */
   /* background-image: url('./assets/background.png'); */
   /* background-size: auto 100%;
