--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
+  margin: 0;
 }
 a {
   text-decoration: none;
@@ -55,4 +55,5 @@ img {
 }
 button {
   cursor: pointer;
+  padding: 0;
 }
